--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -15,5 +15,9 @@
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.js"></script>
+  <!-- Custom Preview using CSS -->
+  <script>
+  CMS.registerPreviewStyle("/example.css");
+  </script>
 </body>
 </html>
