--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -17,7 +17,7 @@
   <script src="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.js"></script>
   <!-- Custom Preview using CSS -->
   <script>
-  CMS.registerPreviewStyle("/example.css");
+  CMS.registerPreviewStyle("example.css");
   </script>
 </body>
 </html>
