--- a/static/Disclaimer.html
+++ b/static/Disclaimer.html
@@ -1,7 +1,7 @@
 <html>
 <h1>Disclaimer</h1>
 
-<p>This disclaimer ("Disclaimer", "Agreement") is an agreement between Website Operator ("Website Operator", "us", "we" or "our") and you ("User", "you" or "your"). This Disclaimer sets forth the general guidelines, terms and conditions of your use of the <a target="_blank" rel="nofollow" href="http://www.quizzr.tech">http://www.quizzr.tech</a> website and any of its products or services (collectively, "Website" or "Services").<h2>Representation</h2>
+<p>This disclaimer ("Disclaimer", "Agreement") is an agreement between Website Operator ("Website Operator", "us", "we" or "our") and you ("User", "you" or "your"). This Disclaimer sets forth the general guidelines, terms and conditions of your use of the <a target="_blank" rel="nofollow" href="https://www.ragasirtahk.tk">https://www.ragasirtahk.tk</a> website and any of its products or services (collectively, "Website" or "Services").<h2>Representation</h2>
 
 <p>Any views or opinions represented in this Website belong solely to the Content creators and do not represent those of people, institutions or organizations that the Website Operator or creators may or may not be associated with in professional or personal capacity, unless explicitly stated. Any views or opinions are not intended to malign any religion, ethnic group, club, organization, company, or individual.<h2>Content and postings</h2>
 
